# bubble-buddy

./: .gitignore  README.md  README.zh-CN.md  RELEASE.md  SUPPORT.md  config.example.json  pyproject.toml  replacements.example.json
.github/: CODEOWNERS
.github/workflows/: publish-skill.yml  release.yml  tests.yml
docs/: README.md  azure.md  configuration.md  context-plugins.md  frontend-design.md  macos-packaging.md  packaging.md  releasing.md
examples/plugins/: example_browser_plugin.py
packaging/: __init__.py  app_launcher.py  bb.icns  bubble-buddy-macos.spec  bubble-buddy.spec  build.ps1  build_macos.sh  copilot-voice-shell-macos.spec  copilot-voice-shell.spec  installer.iss
skills/: README.md  package.json
skills/bubble-buddy/: SKILL.md
skills/bubble-buddy-support/: SKILL.md  package.json
skills/bubble-buddy/references/: config.md  config.schema.json  error-catalog.json  install-guide.json  install.md  messages.json  plugins.md  troubleshooting.md  usage.md
skills/kb/: config.schema.json
skills/skill-config/: SKILL.md  package.json
skills/skill-config/resources/: config.schema.json
skills/skill-doctor/: SKILL.md  package.json
skills/skill-doctor/runbooks/: auth-failure.md  console-flash.md  hotkey-dead.md
skills/skill-installer/: SKILL.md  package.json
skills/skill-installer/resources/: install-guide.json
skills/tools/gen-kb/: gen_kb.py
src/bubble_buddy/: azure_client.py  cli.py  config.py  context_plugins.py  diagnostics.py  focus_context.py  i18n.py  overlay_core.py  platform_services.py  qt_overlay.py  session_context.py
src/copilot_voice_shell/: azure_client.py  cli.py  config.py  context_plugins.py  copilot_session.py  dashboard.py  focus_context.py  frontend_bubble.py  frontend_contract.py  frontend_style.py  i18n.py  overlay.py  overlay_core.py  platform_services.py  polish.py  qt_overlay.py
tests/: test_azure_tenant.py  test_cli.py  test_context_plugins.py  test_copilot_session.py  test_focus_context.py  test_frontend_contract.py  test_greeting.py  test_i18n.py  test_input_device.py  test_overlay_click.py  test_polish_mode.py
tools/: README.md  generate_bb_icon.py
tools/gen-kb/: gen_kb.py
(+10 files in other folders)
