[project]
name = "copilot-voice-shell"
version = "0.1.0"
description = "A local voice wrapper for GitHub Copilot workflows."
readme = "README.md"
authors = [
    { name = "ThousandsOfWind", email = "jtlajich@163.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.138.1",
    "faster-whisper>=1.2.1",
    "onnxruntime==1.23.2",
    "pynput>=1.8.2",
    "pyperclip>=1.11.0",
    "pyside6>=6.11.1",
    "sounddevice>=0.5.5",
    "soundfile>=0.14.0",
    "uvicorn>=0.49.0",
]

[project.scripts]
copilot-voice-shell = "copilot_voice_shell:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
