[project]
name = "copilot-voice-shell"
version = "0.1.0"
description = "A local voice wrapper for GitHub Copilot workflows."
readme = "README.md"
authors = [
    { name = "ThousandsOfWind", email = "jtlajich@163.com" }
]
requires-python = ">=3.10"
dependencies = [
    "azure-identity>=1.25.3",
    "fastapi>=0.138.1",
    "faster-whisper>=1.2.1",
    "mlx-whisper>=0.4.3; sys_platform == 'darwin'",
    "onnxruntime==1.23.2",
    "openai>=2.44.0",
    "pynput>=1.8.2",
    "pyperclip>=1.11.0",
    "pyside6>=6.11.1",
    "qtawesome>=1.4.2",
    "sounddevice>=0.5.5",
    "soundfile>=0.14.0",
    "uiautomation>=2.0.20; sys_platform == 'win32'",
    "uvicorn>=0.49.0",
    "websockets>=16.0",
]

[project.scripts]
copilot-voice-shell = "copilot_voice_shell:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
